2009-03-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Moving to uBLAS vector for function arguments.
	* src/dummy.hh,
	* src/ipopt.hh: Use new template parameters of Solve class.
	* src/optimization-fwd.hh: Add fwd declaration with default data type.
	* src/solver.hh: Use uBLAS bounded vector.
	* src/solver.hxx: Use uBLAS vector, fix getArity.
	* tests/ipopt.cc: Use new interface.
	* tests/ipopt.stdout: Update test output.
	* tests/simple-test.cc: Use new interace.

2009-03-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Enhance Ipopt bridge.
	* src/ipopt.hh: Put MyTNLP out of IpoptSolver.
	* src/optimization-fwd.hh: Declare IpoptSolver.
	* src/solver.hh: Change attributes to protected.

2009-03-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Detect function arity at compile-time.
	* src/ipopt.hh: Set arity in get_nlp_info.
	* src/solver.hh,
	* src/solver.hxx: Detect arity and add getArity method.
	* tests/Makefile.am: Fix ipopt test case flags.

2009-03-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Stub bridge for Ipopt.
	* src/Makefile.am: Add ipopt.hh to distributed headers.
	* src/ipopt.hh: New.
	* tests/Makefile.am: Add Ipopt test.
	* tests/ipopt.at: Copy from tests/testsuite.at.
	* tests/ipopt.cc: New.
	* tests/ipopt.stdout: New.
	* tests/testsuite.at: Include Ipopt test.

2009-03-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Store minimized function in the solver.
	* src/dummy.hh: Add explicit constructor.
	* src/solver.hh: Add explicit constructor, store function.
	* src/solver.hxx: Implement constructor.
	* tests/simple-test.cc: Add a more complex test, fix comments.

2009-03-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Make Solver generic.
	* configure.ac: Remove plug-in Makefiles, distribute tar.bz2.
	* src/Makefile.am: Remove plug-in.
	* src/dummy.hh: Rename from src/plug-in/dummy/dummy.cc.
	* src/optimization-fwd.hh: Fix Solver type.
	* src/plug-in/Makefile.am: Remove.
	* src/plug-in/dummy/Makefile.am: Remove.